Enhance custom layout guide with notes and tips
Added notes and tips for adding a custom layout to the login page.